# rust-stone-game

./: .gitignore  Cargo.toml  build-web.sh  game-mvp.md
.claude/: settings.local.json
assets/shaders/: rock_lit.wgsl
src/: audio.rs  currency.rs  main.rs  ui.rs
src/core/: assets.rs  colors.rs  common.rs  constants.rs  input.rs  mod.rs  state.rs
src/crew/: beachcomber.rs  boatman.rs  builder.rs  fisherman.rs  miner.rs  mod.rs  purchase.rs  skimmer.rs  stonemason.rs  worker.rs
src/economy/: interaction.rs  layout.rs  mod.rs  purchase.rs  relayout.rs  spawn.rs
src/effects/: floating_text.rs  mod.rs  particles.rs  ripple.rs
src/render/: dock.rs  mod.rs  pipeline.rs  rock_material.rs  scroll.rs  shapes.rs  ui_text.rs
src/rocks/: big.rs  imprint.rs  mod.rs  shadow.rs  small.rs
src/structures/: hut.rs  mod.rs  pier.rs  port.rs  research.rs  wood.rs
src/world/: ambient.rs  bg.rs  mod.rs
web/: index.html
